--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development"
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Max",
@@ -29,7 +31,9 @@
     "@emotion/styled": "^10.0.27",
     "@types/lodash": "^4.14.155",
     "@types/react-redux": "^7.1.9",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "path": "^0.12.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
